RESOLVED FIXED165710
Autoplay isn't working in iPhone MediaDocuments
https://bugs.webkit.org/show_bug.cgi?id=165710
Summary Autoplay isn't working in iPhone MediaDocuments
Dean Jackson
Reported 2016-12-09 18:37:29 PST
Autoplay isn't working in iPhone MediaDocuments
Attachments
Patch (5.11 KB, patch)
2016-12-09 18:41 PST, Dean Jackson
darin: review+
Dean Jackson
Comment 1 2016-12-09 18:37:43 PST
Dean Jackson
Comment 2 2016-12-09 18:41:32 PST
Dean Jackson
Comment 3 2016-12-12 10:43:45 PST
Antoine Quint
Comment 4 2016-12-13 02:00:18 PST
Are you certain this test is correct? Shouldn't it check that the loaded video has enough loaded data to play if autoplay had succeeded? What about testing that a video loaded as a media document does actually autoplay as expected?
Note You need to log in before you can comment on or make changes to this bug.