Autoplay isn't working in iPhone MediaDocuments https://bugs.webkit.org/show_bug.cgi?id=165710 <rdar://problems/29606761>

Reviewed by Darin Adler.
Source/WebCore:

Our silent video autoplay detection disabled autoplay
of videos in MediaDocuments.

Test: media/ios/autoplay-only-in-main-document.html

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::playbackPermitted):
Return true if we're in a top-level media document.

LayoutTests:

* media/ios/autoplay-only-in-main-document.html: Make sure that
an iframe pointing to media is not autoplayed.
* TestExpectations:
* platform/ios-simulator/TestExpectations:

Canonical link: https://commits.webkit.org/183371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209715 268f45cc-cd09-0410-ab3c-d52691b4dbfc